--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ html, body, *{
 
   .nav-bar {
       display: flex;
-      justify-content: space-around;
+      
       height: 10vh;
       background-color: black;
 
@@ -30,35 +30,29 @@ html, body, *{
 
   .nav-bar> ul {
       list-style: none;
-      color: white;
       display: flex;
+      
   }
 
-  .nav-bar> li {
-    text-decoration: none;
-  }
+   .nav-bar-links{
+     text-decoration: none;
+     color: #ffffff;
+     margin-right: 40PX;
+     
 
-  .search-form {
-      width: 80px;
-      height: 20px;
-  }
+   } 
 
-  /* .originals {
-  
-    display: flex;
-    height: 100px;
-    width: 50px;
+   .nav-bar-image {
+     height: 130px;
+     padding-bottom: 50px;
+   }
 
-  } */
+   .form-wrapper {
+     padding-left: 100px;
+     display: flex;
+     
+   }
 
-.love{
-  height: 400px;
-  width: 300px;
-
-}
-
-.equinox{
-  height: 400px;
-  width: 300px;
-}
-}
+   .search-foam {
+     width: 80px
+   }
