--- a/styles/button.css
+++ b/styles/button.css
@@ -106,4 +106,20 @@
        
    }
 
+   .sign-up-button {
+       width: 100%;
+       height: 65px;
+       outline: none;
+       display: flex;
+       align-items: center;
+       justify-content: space-between;
+       background: #303030;
+       border: none;
+       color: white;
+       font-size: 24px;
+       font-weight: bolder;
+        padding: 0 25px; 
+       border-bottom: solid 1px black;
+   }
+
    
