--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -4,11 +4,12 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 7px;
 }
 
 body {
-    background: transparent;
-    opacity: 1;
+    
+
 }
 
 .hero-header {
@@ -20,9 +21,7 @@ body {
 }
 
 .sign-up {
-    width: 180px;
-
-    
+    width: 180px;   
 }
 
 .hero-wrapper {
@@ -62,7 +61,7 @@ body {
 .form-title {
     color: white;
     font-weight: bolder;
-    padding-bottom: 20px;
+    padding-bottom: 24px;
 }
 
 .text-field {
@@ -74,6 +73,7 @@ body {
     border: solid 1px  #8c8c8c; 
     border-radius: 2px;
     font-size: 17px;
+    padding-left: 10px;
 }
 
 .input-area {
@@ -86,4 +86,124 @@ body {
     margin-left: 20px;
     font-size: 25px;
     font-weight: bolder;
+}
+
+.story-cards{
+    height: 450px;
+    background-color: black;
+    margin-bottom: 7px;
+}
+
+.story-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.story-img {
+    width: 530px;
+    height: 398px;
+}
+
+.story-text {
+    color: white;
+    padding-bottom: 7px;
+    letter-spacing: 1px;
+}
+
+.enjoy {
+    font-size: 50px;
+}
+/* 
+.story-img {
+    width: 400px;
+    height: 190px;
+} */
+
+.questions {
+    background-color: black;
+    color: white;
+    margin-bottom: 10px;
+    
+}
+
+.questions ul {
+    list-style-type: none;
+}
+.questions li {
+    margin-bottom: 10px;
+}
+
+
+.questions-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 0 50px;
+    font-size: 35px;
+    font-weight: bolder;
+}
+
+.questions-card {
+   width: 800px; 
+}
+
+.questions-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.netflix-explained {
+    width: 100%;
+    height: 185px;
+    background-color:#303030;
+    font-size: 23px;
+    font-weight:bolder;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 13px 30px;
+}
+
+/* .questions-card button:hover  + .netflix-explained {
+  opacity: 1;
+  cursor: pointer;
+}  */
+
+ .sign-up-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}   
+
+.footer-sign-up {
+    width: 100%;
+    /* color: rgb(153, 145, 145); */
+    color: yellowgreen;
+    background-color: black;
+    height: 370px;
+    padding-top: 100px;
+}
+
+.footer-sign-up a {
+    color:rgb(110, 108, 108);
+}
+
+.footer-button-sign-up {
+    margin-bottom: 50px;
+    height: 400px;
+}
+
+.sign-up-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 70px;
+}
+
+.mb-30 {
+    margin-bottom: 60px;
 }
