added a new file, fixed alignment issues and arranged codebase

--- a/styles/home.css
+++ b/styles/home.css
@@ -4,153 +4,129 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-  }
+}
 
-  .header {
-      color: white;
-  }
+.header {
+    color: white;
+}
 
-  .hero-paragraph {
-      padding-top: 20px;
-  }
+.hero-paragraph {
+    padding-top: 20px;
+}
 
-  .nav-img {
-      height: 70px;
-      padding-right: 35px;
-      padding-left: 40px;
-  }
+.nav-img {
+    height: 70px;
+    padding-right: 35px;
+    padding-left: 40px;
+}
 
-  .nav-bar {
-      display: flex;
-      align-items: center;
-      height: 9vh;
-      background-color: rgb(19, 18, 18);
-  } 
+.nav-bar {
+    display: flex;
+    align-items: center;
+    height: 9vh;
+    background-color: rgb(19, 18, 18);
+} 
 
-    .nav-bar ul {
-        list-style: none;
-        display: flex;
-        padding-right: 20px; 
-    }
+.nav-bar ul {
+    list-style: none;
+    display: flex;
+    padding-right: 20px; 
+}
 
-    .nav-bar li {
-        padding-right: 20px;
-        cursor: pointer;
-        font-size: 13px;
-        font-weight: bold;
-    }
+.nav-bar li {
+    padding-right: 20px;
+    cursor: pointer;
+    font-size: 13px;
+    font-weight: bold;
+}
 
-    .netflix-logo-container {
-        display: flex;
-        flex-direction: row;      
-    }
+.netflix-logo-container {
+    display: flex;
+    flex-direction: row;      
+}
 
-    .netflix-logo-container > h4{
-        padding-top: 8px;
-        font-size: 10px;
-        letter-spacing: 2px;
-        padding-left: 4px;
-        font-weight: bold;
-    }
+.netflix-logo-container > h4{
+    padding-top: 8px;
+    font-size: 10px;
+    letter-spacing: 2px;
+    padding-left: 4px;
+    font-weight: bold;
+}
 
-    .netflix-logo {
-        width: 12px;    
-    }
+.netflix-logo {
+    width: 12px;    
+}
 
-    .batgirl {
-        width: 250px;
-        padding-bottom: 14px;
-    }
+.batgirl {
+    width: 250px;
+    padding-bottom: 14px;
+}
 
-    .hero-text {
-        padding-top: 150px;
-        padding-left: 40px;
-    }
+.hero-text {
+    padding-top: 150px;
+    padding-left: 40px;
+}
 
-    .search-tab {
-        padding-left: 400px;
-        justify-content: center;
-        align-items: center;
-    }
+.search-tab {
+    padding-left: 400px;
+    justify-content: center;
+    align-items: center;
+}
 
-    .netflix-content {
-        background: #141414;
-        display: flex;
-        overflow: auto;
-        overflow-x: scroll;
-        scroll-behavior: smooth;
-        padding-top: 30px;
-        padding-left: 60px;
-    }
+.netflix-content {
+    background: #141414;
+    display: flex;
+    overflow: auto;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    padding-top: 30px;
+    padding-left: 60px;
+}
 
-    .movies-series {
+.movies-series {
     margin-right: 4px;
     display: flex;
-    }
+}
 
-    .netflix-content::-webkit-scrollbar {
-        height: 1px;
-    }
+.netflix-content::-webkit-scrollbar {
+    height: 1px;
+}
+
+.category-title {
+    color: white;
+    padding-left: 60px;
+    padding-top: 20px;
+    font-size: 19px;
+    font-weight: bolder;
+    cursor: pointer;
+} 
+
+.chevrons-right-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.category-heading {
+    display: flex;
+    align-items: center;
+}
+
+.footer-content {
+    margin-right: 50px;
+} 
 /* 
-    .netflix-content > h1 {
-        color: white;
-        font-size: 17px;
-        padding-left: 22px;
-        padding-top: 10px;
-    } */
-
- .category-title {
-     color: white;
-     padding-left: 60px;
-     padding-top: 20px;
-     font-size: 19px;
-     font-weight: bolder;
-     cursor: pointer;
- } 
-
-
- .chevrons-right-wrapper {
+.copyright {
+    padding-left: 190px;
+    padding-top: 20px;
+    color: grey;
+    font-size: 13px;
+} */
+/* 
+.footer-wrapper {
     display: flex;
-    align-items: center;
-  }
+    justify-content: space-evenly; 
+} */
 
-  .category-heading {
-    display: flex;
-    align-items: center;
-  }
 
-  .netflix-footer {
-       padding-left:60px;
-      padding-top: 30px;
-      color: grey;
-      font-size: 13px;
-      font-family: sans-serif;
-      font-weight: bolder;
-      margin-top: 100px; 
-  }
 
-  .footer-content  > h4 {
-    padding-bottom: 15px;
-  }
 
-  .footer-content {
-      margin-right: 50px;
-  } 
-
-  .copyright {
-      padding-left: 190px;
-      padding-top: 20px;
-      padding-bottom: 30px;
-      color: grey;
-      font-size: 13px;
-  }
-
-  .footer-wrapper {
-      display: flex;
-      justify-content: space-evenly; 
-  }
-
-  
-
- 
- 
