--- a/styles/button.css
+++ b/styles/button.css
@@ -1,106 +1,134 @@
    .btn {
-       display: flex;
-       background: none;  
-       border: none;
-       padding: 8px;
-       font-size: 17px;
-       border-radius: 5px;
-       align-items: center;
-       cursor: pointer; 
-   } 
+    display: flex;
+    background: none;  
+    border: none;
+    padding: 8px;
+    font-size: 17px;
+    border-radius: 5px;
+    align-items: center;
+    cursor: pointer; 
+} 
 
-   .btn-sml {
-       width: 100px;
-       border: none;
-       background-color: white;  
-   }
+.btn-sml {
+    width: 100px;
+    border: none;
+    background-color: white;  
+}
 
-   .btn-lg {
-       width: 150px;
-       background-color:#777272;
-       opacity: 0.5;   
-   }
+.btn-lg {
+    width: 150px;
+    background-color:#777272;
+    opacity: 0.5;   
+}
 
-   .btn-sml:hover {
-       background:rgb(179, 193, 196);
-   }
+.btn-sml:hover {
+    background:rgb(179, 193, 196);
+}
 
-   .btn-lg :hover {
-       opacity: 1;
-   }
+.btn-lg :hover {
+    opacity: 1;
+}
 
-   .btn-nav {
-       background: none;
-       color: white;
-       width: 180px;
-       border: solid 1px;
-       padding: 5px; 
-       display: flex;
-       align-items: center;
-   }
-    
-   .button-wrapper {
-       display: flex;
-   }
+.btn-nav {
+    background: none;
+    color: white;
+    width: 180px;
+    border: solid 1px;
+    padding: 5px; 
+    display: flex;
+    align-items: center;
+}
 
-   .button-wrapper :not(:first-child){
-       margin-left: 20px;
-   }
+.button-wrapper {
+    display: flex;
+}
 
-   .footer-btn {
-        background-color: #141414;
-       border: solid 1px grey;
-        color: grey;
-       height: 30px;
-       width: 100px;
-       cursor: pointer;
-       align-items: center;
-   }
+.button-wrapper :not(:first-child) {
+    margin-left: 20px;
+}
 
-   .footer-btn :hover {
-       color: white;
-   }
+.footer-btn {
+    height: 44px;
+    width: 130px;
+    padding: 10px;
+    display: flex;
+    align-items: center;  
+    text-align: center;
+    justify-content: space-between;
+    margin-left: 200px;
+    background-color:black;
+    color: #9999;
+    outline: none;
+    border: none;
+    border: solid 1px #9999;
+} 
 
-   .header-btn {
-       height: 34px;
-       width: 85px;
-       border: none;
-       outline: none;
-       background: none;
-       background-color: #e50914;;
-       border-radius: 3px;
-       color: white;
-       font-size: 1rem;
-       font-weight: bolder; 
-   }
+.service-btn {
+    background-color: #141414;
+    border: solid 1px grey;
+    color: grey;
+    height: 30px;
+    width: 100px;
+    cursor: pointer;
+    align-items: center; 
+    font-weight: bold;
+}
 
-   .form-btn {
-       height: 58px;
-       width: 210px;
-        border: none;
-       background-color: #e50914;
-       border-radius: 2px;
-       color: white;
-       font-size: larger;
-       font-weight: bolder;
-       display: flex;
-       align-items: center; 
-   }
+.service-btn:hover {
+    color: white;
+} 
 
-   .sign-up-button {
-       width: 100%;
-       height: 65px;
-       outline: none;
-       display: flex;
-       align-items: center;
-       justify-content: space-between;
-       background: #303030;
-       border: none;
-       color: white;
-       font-size: 24px;
-       font-weight: bolder;
-        padding: 0 25px; 
-       border-bottom: solid 1px black;
-   }
+.header-btn {
+    height: 34px;
+    width: 85px;
+    border: none;
+    outline: none;
+    background: none;
+    background-color: #e50914;;
+    border-radius: 3px;
+    color: white;
+    font-size: 1rem;
+    font-weight: bolder; 
+}
 
-   
+.form-btn {
+    height: 58px;
+    width: 240px;
+    border: none;
+    background-color: #e50914;
+    border-radius: 2px;
+    color: white;
+    font-size: larger;
+    font-weight: bolder;
+    display: flex;
+    align-items: center; 
+}
+
+.sign-up-button {
+    width: 100%;
+    height: 65px;
+    outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #303030;
+    border: none;
+    color: white;
+    font-size: 24px;
+    font-weight: bolder;
+    padding: 0 25px; 
+    border-bottom: solid 1px black;
+}
+
+.story-footer-btn {
+    height: 53px;
+    width: 142px;
+    outline: none;
+    border: 1px solid #333;
+    background: black;
+    color:#999;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 16px;
+}
