--- a/styles/sign.css
+++ b/styles/sign.css
@@ -132,62 +132,20 @@ body{
     color: royalblue;
 }
 
-
 .log-facebook {
     padding-left: 6px;
     color: rgb(153, 145, 145);
     padding-bottom: 10px;
-
 }
 
 .checkbox-container {
     padding-bottom: 40px;
 }
-
-.footer  {
-    width: 100%;
-    color: rgb(153, 145, 145);
-    background-color: rgba(0,0,0,.75);
-    position: absolute;
-    bottom: 0;
-    height: 230px;    
-}
- .footer a {
-    color:  rgb(153, 145, 145); 
-}
-
-.footer-container {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly; 
-}
-
-.contacts {
-    display: flex;
-    margin : 20px 0px;
-    padding-left: 200px;   
-} 
-
-.contacts > a {
-    margin-right: 8px;
-    font-size: 17px;
-    font-weight: bolder;
-    color: gray;
-}
-
-.content {
-    display: flex;
-    flex-direction: column; 
-}
-
-.content > a {
-    margin-bottom: 15px;
-}
-                                                                              
-.footer-button {
+                                                                        
+ /* .footer-button {
     padding-left: 200px;
-}
-
+} */
+/* 
 .footer-btn {
     height: 44px;
     width: 130px;
@@ -198,7 +156,7 @@ body{
     justify-content: space-between;
     margin-left: 200px;
     background-color:black;
-}
+} */
 
 .link:hover{
     border-bottom: solid 1px;
