--- a/styles/button.css
+++ b/styles/button.css
@@ -63,6 +63,26 @@
     border: solid 1px #9999;
 } 
 
+.sign-in-btn {
+    height: 50px;
+    line-height: 50px;
+    width: 320px;
+    border-radius: 4px;
+    border: 0;
+    padding-left: 15px;
+    color: white;
+    margin-bottom: 20px;
+    background: #e50914;
+}
+
+@media only screen and (max-width: 800px) {
+    .sign-in-btn {
+        width: 630px;
+        font-size: 17px;
+        font-weight: bolder;
+    }
+}
+
 .service-btn {
     background-color: #141414;
     border: solid 1px grey;
@@ -131,4 +151,27 @@
     align-items: center;
     justify-content: space-around;
     font-size: 16px;
+}
+
+/* 
+.footer-btn {
+    height: 44px;
+    width: 130px;
+    padding: 10px;
+    display: flex;
+    align-items: center;  
+    text-align: center;
+    justify-content: space-between;
+    margin-left: 200px;
+    background-color:black;
+} */
+
+
+@media only screen and (max-width: 800px) {
+    .footer-btn {
+        margin-left: -5px;
+        margin-left: 87px;
+        margin-top: 32px;
+    } 
+
 }
