--- a/styles/footer.css
+++ b/styles/footer.css
@@ -85,12 +85,12 @@ h5{
     width: 100%;
     justify-content: space-evenly; 
 }
-
+ 
 .contacts {
     display: flex;
     margin : 20px 0px;
     padding-left: 200px;   
-} 
+}
 
 .contacts > a {
     margin-right: 8px;
@@ -123,6 +123,23 @@ h5{
     padding-top: 20px;
     color: grey;
     font-size: 13px;
-    margin-top: -40 px;
+    margin-top: -40px;
     padding-bottom: 100px;
 } 
+
+@media only screen and (max-width: 800px){
+    .footer  {
+        width: 100%;
+        color: rgb(153, 145, 145);
+        background-color:black;
+        height: 250px; 
+        border-top: solid 1px  rgb(153, 145, 145); 
+        z-index:-999;  
+    }
+    .contacts {
+    display: flex;
+    margin : 30px 0px;
+    padding-left: 83px;  
+}
+     
+}
