--- a/styles/sign.css
+++ b/styles/sign.css
@@ -1,10 +1,10 @@
 a {
     text-decoration: none;
     font-size: 13px;
-  }
+}
 body{
     font-size: 15px;
- }
+}
 .container {
     height: 150vh;
     width: 100%;
@@ -12,28 +12,28 @@ body{
     background-color: transparent;
     position: relative;
 }
- 
- .netflix-bkgd-img {
-     background: url("../images/netflix_codigos.jpg");  
-     height: 150vh;
-     width: 100%; 
-     background-repeat: no-repeat;
-     background-size: cover;
-     opacity: 0.8;  
- }
 
- .banner-img {  
-     width: 205px; 
- }
+.netflix-bkgd-img {
+    background: url("../images/netflix_codigos.jpg");  
+    height: 150vh;
+    width: 100%; 
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.8;  
+}
 
- .header-wrapper {
-     position: absolute;
-     top: 0;
-     left: 0;
-     opacity: 0.9;
- }
+.banner-img {  
+    width: 205px; 
+}
 
- .form-wrapper {
+.header-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.9;
+}
+
+.form-wrapper {
     position: absolute;
     top: 10%;
     left: 35%;
@@ -45,37 +45,25 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
- }
+}
 
- .form-heading {
-     color: white;
-     padding-bottom: 30px;
-     font-weight: bolder;
- }
+.form-heading {
+    color: white;
+    padding-bottom: 30px;
+    font-weight: bolder;
+}
 
- .input {
-     height: 50px;
-     line-height: 50px;
-     width: 320px;
-     border-radius: 4px;
-     border: 0;
-     padding-left: 15px;
-     color: white;
-     background: #333;
-     margin-bottom: 35px;
- }
-
- .sign-in-btn {
-     height: 50px;
-     line-height: 50px;
-     width: 320px;
-     border-radius: 4px;
-     border: 0;
-     padding-left: 15px;
-     color: white;
-     margin-bottom: 20px;
-     background: #e50914;
- }
+.input {
+    height: 50px;
+    line-height: 50px;
+    width: 320px;
+    border-radius: 4px;
+    border: 0;
+    padding-left: 15px;
+    color: white;
+    background: #333;
+    margin-bottom: 35px;
+}
 
 .checkbox-container {
     display: flex;
@@ -86,24 +74,6 @@ body{
     padding-left: 127px;
     font-size:13px;
     color: rgb(153, 145, 145);
-}
-
-.form-icon-wrapper {
-    display: flex;
-    align-items: center;
-    padding-top: 10px;
-    
-}
-
-.form-icon-wrapper > a {
-    color:rgb(154, 145, 145);
-}
-
-.facebook-icon {
-    border: solid 1px royalblue;
-    height: 20px;
-    background-color: royalblue;
-    color: white;
 }
 
 .user-info {
@@ -119,7 +89,7 @@ body{
 .user-info a {
     color: white;
     font-size: 17px;
-   font-weight: bolder; 
+    font-weight: bolder; 
 }
 
 .form-bottom {
@@ -141,24 +111,67 @@ body{
 .checkbox-container {
     padding-bottom: 40px;
 }
-                                                                        
- /* .footer-button {
-    padding-left: 200px;
-} */
-/* 
-.footer-btn {
-    height: 44px;
-    width: 130px;
-    padding: 10px;
-    display: flex;
-    align-items: center;  
-    text-align: center;
-    justify-content: space-between;
-    margin-left: 200px;
-    background-color:black;
-} */
 
 .link:hover{
     border-bottom: solid 1px;
     width: fit-content;
+}
+
+
+ /* // MEDIA QUERRIES // */
+
+
+@media only screen and (max-width: 800px) {
+    .netflix-bkgd-img {
+        background-image: none;
+        background-color:none;
+        color: white;
+    }
+    .form-wrapper {
+        border: none;
+        position: absolute;
+        background-color: none;
+        top: 6%;
+        left: 3%;
+        display: flex;
+        width: 100%;
+        /* margin-top: 20px; */
+        padding-top: 10px;
+        z-index: 99;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .container {
+        background-color:black;
+    }
+    .input {
+        height: 50px;
+        line-height: 50px;
+        width: 630px;
+        border-radius: 4px;
+        border: 0;
+        padding-left: 15px;
+        color: white;
+        background: #333;
+        margin-bottom: 35px;
+        outline-style: none;
+    }
+    .checkbox-container {
+        display: flex;
+        font-size:13px;
+    }
+    .checkbox-container >h4 {
+        padding-left: 475px;
+    } 
+    .banner-img {  
+        width: 210px; 
+    }
+    
+    .header-wrapper {
+        position: absolute;
+        top: -23px;
+        left: 0;
+        z-index: 999;
+    }  
 }
